--- a/slides/gourmet-september-13-2021-mbr/slide-deck.html
+++ b/slides/gourmet-september-13-2021-mbr/slide-deck.html
@@ -66,7 +66,7 @@
 <header>Sampling-based MBR for NMT</header>
 
 <h1>MAP Decoding</h1>
-<p>The most common decision rule in NMT is known as <em>maximum-a-posteriori (MAP) decoding</em>. It tells us to pick the mode of the distribution, no matter how unprobable it is.</p>
+<p>The most common decision rule in NMT is known as <em>maximum-a-posteriori (MAP) decoding</em>. It tells us to pick the mode of the distribution, no matter how improbable it is.</p>
 <p><img src="img/mt-p.png" alt="The 10 most probable translation candidates of a given sentence order by probability. The 3 most probable candidates are clearly inadequate, essentially incomplete translations. Although these are the most probable candidates, they only account for less than 10 percent of the probability mass. It is fair to conclude they are rather rare, despite being the most probable options available." title="10 most probable candidates for the source sentence: a moda não é adequada" /></p>
 <ul>
 <li data-marpit-fragment="1">MAP decoding: <code>&lt;/s&gt;</code></li>
