--- a/slides/gourmet-september-13-2021-mbr/slide-deck.html
+++ b/slides/gourmet-september-13-2021-mbr/slide-deck.html
@@ -102,7 +102,7 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-header="Sampling-based MBR for NMT" data-paginate="true" data-footer="Bryan Eikema and Wilker Aziz" data-marpit-pagination="9" data-marpit-pagination-total="31" style="--header:Sampling-based MBR for NMT;--paginate:true;--footer:Bryan Eikema and Wilker Aziz;">
 <header>Sampling-based MBR for NMT</header>
 <h1>A Model as a Representation of What's Known</h1>
-<p>If you had to decide between <code>me &lt;/s&gt;</code> and <code>the mode isn't adequate &lt;/s&gt;</code>, and all you knew about language and translation is what an NMT model tells you:<br />
+<p>If you had to decide between <code>&lt;/s&gt;</code> and <code>the mode isn't adequate &lt;/s&gt;</code>, and all you knew about language and translation is what an NMT model tells you:<br />
 <img src="img/mt-p.png" alt="The 10 most probable translation candidates of a given sentence order by probability. The 3 most probable candidates are clearly inadequate, essentially incomplete translations. Although these are the most probable candidates, they only account for less than 10 percent of the probability mass. It is fair to conclude they are rather rare, despite being the most probable options available." title="10 most probable candidates for the source sentence: a moda não é adequada" /></p>
 <div data-marpit-fragment>
 <p>What would you pick and why?</p>
